GNOME Bugzilla – Bug 704606
Map "Easy" missing in PO/POT
Last modified: 2013-09-06 19:37:27 UTC
Map name "Easy" is missing as translateable.
Wild guess: Change https://git.gnome.org/browse/gnome-mahjongg/tree/data/org.gnome.gnome-mahjongg.gschema.xml.in#n13 to <_default>Easy</_default>?
Created attachment 254240 [details] [review] Mark "Easy" string as translatable
No. It's unfortunately more complicated. "Easy" is missing in data/translatable_game_names.h It's easy add line: NC_("mahjongg map name", "Easy") But application stores current map in dconf as translated name. It's stupid. - default value is Easy and if you have non-English locale, this value is invalid - if you change your locale, current value becomes invalid Schema should store English names.
Created attachment 254247 [details] [review] Mark Easy map name as translatable We additionally need to store only the untranslated name in gsettings, as we do with the non-builtin maps.
Marek, can you sanity-check this for me please? I'm not familiar with the process for adding new string translations, so I haven't tested to make sure this actually works.
Testing: Apply the patch, go to /po, run "intltool-update -p", open the .pot file to see if the string is included. With regard to merging the patch into the codebase: Merging "forgotten" strings only requires announcing to gnome-i18n@, see https://wiki.gnome.org/TranslationProject/HandlingStringFreezes
Right; we also needed to make sure the translated map name wasn't being used in gsettings, so I learned how to use -d to merge po files. It does seem fixed so I'll push this now. Thanks everyone! Attachment 254247 [details] pushed as 6b84b2c - Mark Easy map name as translatable