Mark Easy map name as translatable

We additionally need to store only the untranslated name in gsettings,
as we do with the non-builtin maps.

https://bugzilla.gnome.org/show_bug.cgi?id=704606